@@ -24,7 +24,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -39,7 +39,6 @@ import org.apache.http.impl.client.HttpClients;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
-import org.json.JSONException;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -49,21 +48,19 @@ import com.viglet.turing.persistence.model.nlp.TurNLPInstanceEntity;
 import com.viglet.turing.persistence.repository.nlp.TurNLPInstanceEntityRepository;
 import com.viglet.turing.plugins.nlp.TurNLPImpl;
 import com.viglet.turing.solr.TurSolrField;
+import com.viglet.turing.utils.TurUtils;
 
 @Component
 public class TurCoreNLPConnector implements TurNLPImpl {
-	static final Logger logger = LogManager.getLogger(TurCoreNLPConnector.class.getName());
+	private static final Logger logger = LogManager.getLogger(TurCoreNLPConnector.class.getName());
 
 	@Autowired
-	TurNLPInstanceEntityRepository turNLPInstanceEntityRepository;
+	private TurNLPInstanceEntityRepository turNLPInstanceEntityRepository;
 	@Autowired
-	TurSolrField turSolrField;
-
-	public static int PRETTY_PRINT_INDENT_FACTOR = 4;
-	List<TurNLPInstanceEntity> nlpInstanceEntities = null;
-	Map<String, List<Object>> entityList = new HashMap<String, List<Object>>();
-
-	TurNLPInstance turNLPInstance = null;
+	private TurSolrField turSolrField;
+	private List<TurNLPInstanceEntity> nlpInstanceEntities = null;
+	private Map<String, List<Object>> entityList = new HashMap<>();
+	private TurNLPInstance turNLPInstance = null;
 
 	public void startup(TurNLPInstance turNLPInstance) {
 		this.turNLPInstance = turNLPInstance;
@@ -88,7 +85,7 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 		try (CloseableHttpClient httpclient = HttpClients.createDefault()) {
 			String props = "{\"tokenize.whitespace\":\"true\",\"annotators\":\"tokenize,ssplit,pos,ner\",\"outputFormat\":\"json\"}";
 
-			String queryParams = String.format("properties=%s", URLEncoder.encode(props, "utf-8"));
+			String queryParams = String.format("properties=%s", URLEncoder.encode(props, StandardCharsets.UTF_8));
 
 			URL serverURL = new URL("http", turNLPInstance.getHost(), turNLPInstance.getPort(), "/?" + queryParams);
 
@@ -104,9 +101,9 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 				if (entity != null) {
 					try (InputStream instream = entity.getContent();
 							BufferedReader rd = new BufferedReader(
-									new InputStreamReader(instream, Charset.forName("UTF-8")))) {
+									new InputStreamReader(instream, StandardCharsets.UTF_8))) {
 						String jsonResponse = readAll(rd);
-						if (this.isJSONValid(jsonResponse)) {
+						if (TurUtils.isJSONValid(jsonResponse)) {
 							this.getEntities(new JSONObject(jsonResponse));
 						}
 					}
@@ -128,8 +125,7 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 					this.getEntity(nlpInstanceEntity.getName()));
 		}
 
-		// System.out.println(jsonObject.toString());
-		logger.debug("CoreNLP getAttributes: " + entityAttributes.toString());
+		logger.debug("CoreNLP getAttributes: {}", entityAttributes.toString());
 		return entityAttributes;
 	}
 
@@ -156,13 +152,9 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 				JSONObject token = (JSONObject) tokens.get(t);
 
 				currNeToken = token.getString("ner");
-				// System.out.println("NER: " + currNeToken);
 				String word = token.getString("word");
-				// Strip out "O"s completely, makes code below easier to
-				// understand
 				if (currNeToken.equals("O")) {
-					// LOG.debug("Skipping '{}' classified as {}", word,
-					// currNeToken);
+
 					if (!prevNeToken.equals("O") && (sb.length() > 0)) {
 						handleEntity(prevNeToken, sb, tokenList);
 						newToken = true;
@@ -180,10 +172,6 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 				if (currNeToken.equals(prevNeToken)) {
 					sb.append(" " + word);
 				} else {
-					// We're done with the current entity - print it out and
-					// reset
-					// TODO save this token into an appropriate ADT to return
-					// for useful processing..
 					this.handleEntity(prevNeToken, sb, tokenList);
 					newToken = true;
 				}
@@ -198,23 +186,20 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 	}
 
 	public List<Object> getEntity(String entity) {
-		// System.out.println("Entity getEntity: " + entity);
 		return entityList.get(entity);
 	}
 
 	private void handleEntity(String inKey, StringBuilder inSb, List<EmbeddedToken> inTokens) {
-		// System.out.println(inSb + " is a " + inKey);
 		inTokens.add(new EmbeddedToken(inKey, inSb.toString()));
 
 		if (entityList.containsKey(inKey)) {
 			entityList.get(inKey).add(inSb.toString());
 		} else {
-			List<Object> valueList = new ArrayList<Object>();
+			List<Object> valueList = new ArrayList<>();
 			valueList.add(inSb.toString());
 			entityList.put(inKey, valueList);
 		}
 
-		// System.out.println("entityList Size:" + entityList.size());
 		inSb.setLength(0);
 	}
 
@@ -236,20 +221,5 @@ public class TurCoreNLPConnector implements TurNLPImpl {
 			this.name = name;
 			this.value = value;
 		}
-	}
-
-	public boolean isJSONValid(String test) {
-		try {
-			new JSONObject(test);
-		} catch (JSONException ex) {
-			// edited, to include @Arthur's comment
-			// e.g. in case JSONArray is valid as well...
-			try {
-				new JSONArray(test);
-			} catch (JSONException ex1) {
-				return false;
-			}
-		}
-		return true;
 	}
 }
